--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,8 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "extends": "@asd14/ts-config/targets/node",
-  "compilerOptions": {
-    "rootDir": "./",
-    "outDir": "./dist/types"
-  },
-  "include": ["src", "eslint.config.js"],
-  "exclude": ["node_modules"]
+  "files": [],
+  "references": [
+    { "path": "./tsconfig.lib.json" },
+    { "path": "./tsconfig.dev.json" }
+  ]
 }
